--- a/src/app/language/language.component.html
+++ b/src/app/language/language.component.html
@@ -10,7 +10,7 @@
               </select>
         </div>
         <div class="col-2 position-relative">
-            <button type="button" class="btn btn-secondary position-absolute top-0 end-0">{{'modal_close' | translate }}</button>
+            <button type="button" class="btn btn-secondary position-absolute top-0 end-0">{{(modalObservalble | langColor) | translate }}</button>
         </div>
         <div class="col-12 py-4">
             <h3 class="text-success">{{'french' | translate }}</h3>
@@ -22,7 +22,7 @@
             <div class="card text-white bg-dark mb-3 h-75 w-100 contentCardNumberLang">
                 <div class="card-body">
                     <h5 class="card-title">{{'number_of_languages' | translate }}</h5>
-                    <p class="card-text text-center py-4">{{(languages | async)?.length}} {{modalObservalble}}</p>
+                    <p class="card-text text-center py-4">{{(languages | async)?.length}}</p>
                 </div>
             </div>
         </div>
