--- a/src/app/form-language/form-language.component.html
+++ b/src/app/form-language/form-language.component.html
@@ -66,9 +66,8 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="col-auto">
-                            <button type="submit" class="btn btn-primary">{{'save' | translate }}</button>
-                        </div>
+                        <button type="submit" class="btn btn-primary">{{'save' | translate }}</button>
+                        <button type="reset" class="btn btn-secondary m-2">{{'cancel' | translate }}</button>
                     </div>
                 </div>
             </div>
