--- a/src/app/single-language/single-language.component.html
+++ b/src/app/single-language/single-language.component.html
@@ -1,35 +1,3 @@
-<!-- <tr>
-<td>{{languageItem.language | translate}}</td>
-<td>{{languageItem.spoken_level | translate}}</td>
-<td>{{languageItem.written_level | translate}}</td>
-<td>{{languageItem.comprehension_level | translate}}</td>
-<td>
-    <button type="button" title="Modifier" class="btn btn-secondary m-1 btn-sm"><i class="fa fa-edit"></i></button>
-    <button type="button" title="Detail" class="btn btn-info m-1 btn-sm" (click)="openModal(mymodal, languageItem)"><i class="fa fa-info-circle fs-6"></i></button>
-    <button type="button" title="Supprimer" class="btn btn-danger m-1 btn-sm" (click)="deleteLanguage(languageItem)"><i class="fa fa-trash"></i></button>
-</td> -->
-
-<ng-template #mymodal let-modal>
-    <div class="modal-header">
-        <h5 class="modal-title" id="modal-basic-title">{{'detail' | translate}}</h5>
-        <button type="button" class="close" aria-label="Close" (click)="closeModal(modal)">
-        <span aria-hidden="true">×</span>
-      </button>
-    </div>
-    <div class="modal-body">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">{{languageChoose | translate}}</div>
-                <div class="col-6 fw-bold">{{'spoken_level' | translate}}</div>
-                <div class="col-6">{{levelSpoken | translate}}</div>
-                <div class="col-6 fw-bold">{{'written_level' | translate}}</div>
-                <div class="col-6">{{writtenLevel | translate}}</div>
-                <div class="col-6 fw-bold">{{'comprehension_level' | translate}}</div>
-                <div class="col-6">{{comprehensionLevel | translate}}</div>
-            </div>
-        </div>
-    </div>
-</ng-template>
 <div class="card">
     <div class="card-body">
         <div class="container-fluid">
@@ -47,11 +15,26 @@
                     <span class="fw-bold">{{'comprehension_level' | translate }}: </span> {{languageItem.comprehension_level | translate}}
                 </div>
                 <div class="col-lg-2 col-md-4 col-sm-12">
-                    <button type="button" title="Modifier" class="btn btn-secondary m-1 btn-sm"><i class="fa fa-edit"></i></button>
-                    <button type="button" title="Detail" class="btn btn-info m-1 btn-sm" (click)="openModal(mymodal, languageItem)"><i class="fa fa-info-circle fs-6"></i></button>
-                    <button type="button" title="Supprimer" class="btn btn-danger m-1 btn-sm" (click)="deleteLanguage(languageItem)"><i class="fa fa-trash"></i></button>
+                    <button type="button" title="Modifier" class="btn btn-secondary m-1 btn-sm" (click)="editLanguage(languageItem)"><i class="fa fa-edit"></i></button>
+                    <button type="button" title="Detail" class="btn btn-info m-1 btn-sm" (click)="openModal(languageItem)"><i class="fa fa-info-circle fs-6"></i></button>
+                    <button type="button" title="Supprimer" class="btn btn-danger m-1 btn-sm" (click)="openModalDelete(content)"><i class="fa fa-trash"></i></button>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Modal -->
+<ng-template #content let-modal>
+    <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{'deleting' | translate}}</h5>
+        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        {{'do_you_really_want_to_remove_this_language' | translate}} (<span class="fw-bold">{{languageItem.language | translate}}</span>) ?
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="modal.dismiss('Cross click')">{{'no' | translate}}</button>
+        <button type="button" class="btn btn-danger" (click)="deleteLanguage(languageItem)">{{'yes' | translate}}</button>
+    </div>
+</ng-template>
