--- a/src/app/detail-language/detail-language.component.html
+++ b/src/app/detail-language/detail-language.component.html
@@ -1,1 +1,19 @@
-<p>detail-language works!</p>
+<div class="modal-header">
+    <h5 class="modal-title" id="modal-basic-title">{{'detail' | translate}}</h5>
+    <button type="button" class="close" aria-label="Close" (click)="closeModal()">
+        <span aria-hidden="true">×</span>
+      </button>
+</div>
+<div class="modal-body">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">{{languageDetail.language | translate}}</div>
+            <div class="col-6 fw-bold">{{'spoken_level' | translate}} :</div>
+            <div class="col-6">{{languageDetail.spoken_level | translate}}</div>
+            <div class="col-6 fw-bold">{{'written_level' | translate}} :</div>
+            <div class="col-6">{{languageDetail.written_level | translate}}</div>
+            <div class="col-6 fw-bold">{{'comprehension_level' | translate}} :</div>
+            <div class="col-6">{{languageDetail.comprehension_level | translate}}</div>
+        </div>
+    </div>
+</div>
