--- a/src/app/detail-language/detail-language.component.html
+++ b/src/app/detail-language/detail-language.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
     <h5 class="modal-title" id="modal-basic-title">{{'detail' | translate}}</h5>
-    <button type="button" class="close" aria-label="Close" (click)="closeModal()">
+    <button type="button" class="close" aria-label="Close" (click)="modalService.dismiss('Cross click')">
         <span aria-hidden="true">×</span>
       </button>
 </div>
