--- a/src/app/language/language.component.html
+++ b/src/app/language/language.component.html
@@ -32,12 +32,14 @@
                     <div class="col-12">
                         <h4 class="pt-4">{{'list_of_languages' | translate }}</h4>
                     </div>
-                    <div class="col-12 text-center py-5" *ngIf="loader$ | async">
+                    <div class="col-12 text-center py-5" *ngIf="loader$ | async; else displayLanguages">
                         <div class="spinner-border text-secondary" style="width: 5rem; height: 5rem;" role="status">
                             <span class="visually-hidden">Loading...</span>
                         </div>
                     </div>
-                    <lang-single class="col-sm-12 my-2" *ngFor="let language of languages$ | async" [languageItem]="language" (stateModalEvent)="modalObservalble=$event"></lang-single>
+                    <ng-template #displayLanguages>
+                        <lang-single class="col-sm-12 my-2" *ngFor="let language of languages$ | async" [languageItem]="language" (stateModalEvent)="modalObservalble=$event"></lang-single>
+                    </ng-template>
                 </div>
             </div>
         </div>
